--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -1,59 +1,76 @@
-.gpt3__blog-container_article {
-  width: 100%;
-  height: 100%;
-
+.gpt3__blog {
   display: flex;
   flex-direction: column;
-  background: var(--color-footer);
 }
 
-.gpt3__blog-container_article-image {
+.gpt3__blog-heading {
   width: 100%;
-  height: 100%;
-  background: var(--color-bg);
-}
+  text-align: left;
 
-.gpt3__blog-container_article-image img {
-  width: 100%;
-  height: 100%;
-}
-
-.gpt3__blog-container_article-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  padding: 1rem 1.5rem;
-  height: 100%;
-}
-
-.gpt3__blog-container_article-content p {
-  font-family: var(--font-family);
-  font-size: 11.65px;
-  font-weight: 700;
-  line-height: 35px;
-
-  color: #fff;
-}
-
-.gpt3__blog-container_article-content h3 {
-  font-family: var(--font-family);
-  font-size: 25.11px;
-  font-weight: 800;
-  line-height: 30.3px;
-
-  color: #fff;
   margin-bottom: 5rem;
-  cursor: pointer;
 }
 
-.gpt3__blog-container_article-content p:last-child {
-  cursor: pointer;
+.gpt3__blog-heading h1 {
+  font-size: 62px;
+  line-height: 75px;
+  font-family: var(--font-family);
+  font-weight: 800;
+}
+
+.gpt3__blog-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.gpt3__blog-container_groupA {
+  flex: 0.75;
+  margin-right: 2rem;
+}
+
+.gpt3__blog-container_groupB {
+  flex: 1;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+
+@media screen and (max-width: 990px) {
+  .gpt3__blog-container {
+    flex-direction: column-reverse;
+  }
+
+  .gpt3__blog-container_groupA {
+    margin: 2rem 0;
+  }
+
+  .gpt3__blog-container_groupA .gpt3__blog-container_article {
+    width: 48%;
+  }
+
+  .gpt3__blog-container_groupA .gpt3__blog-container_article-image {
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .gpt3__blog-container_groupB {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .gpt3__blog-container_groupA .gpt3__blog-container_article {
+    width: 100%;
+  }
+
+  .gpt3__blog-heading h1 {
+    font-size: 46px;
+    line-height: 52px;
+  }
 }
 
 @media screen and (max-width: 550px) {
-  .gpt3__blog-container_article-content h3 {
-    font-size: 18px;
-    line-height: 25p;
+  .gpt3__blog-heading h1 {
+    font-size: 34px;
+    line-height: 42px;
   }
 }
